Added Staging Config files for new PROD cluster